# guarantees-based-mechanistic-interpretability

./: .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  generate-data.yaml  lint.yml  pre-commit-autoupdate.yml  publish.yml
etc/: free_disk_space.sh  setup-alternates.py
gbmi/: model.py
gbmi/analysis_tools/: decomp.py  fit.py  l1h1.py  plot.py  utils.py
gbmi/bigram_stats/: analysis.py  train_test.py  verification.py
gbmi/exp_argmax_of_n/: __init__.py  run_train_argmax_of_10.py  run_train_argmax_of_20.py  run_train_argmax_of_4.py  run_train_argmax_of_5.py  train.py
gbmi/exp_bigram_stats/: data_utils.py  plot.py  run_training.py  run_training_abcab.py  run_training_abcab1h.py  run_training_abcab5_1h.py  run_training_abcab5_1h_many_seeds.py  run_training_abcab6_1h.py  run_training_abcab6_1h_many_seeds.py  run_training_abcab6_shortformer_1h.py  run_training_abcab6_small_1h.py  run_training_abcab7_1h.py  run_training_abcab7_1h_many_seeds.py  run_training_abcab8_1h.py  run_training_abcab8_1h_many_seeds.py  run_training_abcab8_shortformer_1h.py  run_training_trigram4_1h.py  run_training_trigram4_1h_many_seeds.py  run_training_trigram5_1h.py  run_training_trigram5_1h_many_seeds.py  run_training_trigram6_1h.py  run_training_trigram6_1h_many_seeds.py  run_training_trigram7_1h.py  run_training_trigram7_1h_many_seeds.py  run_training_trigram8_1h_many_seeds.py  train.py
gbmi/exp_f_g/: functions.py  train.py
gbmi/exp_group_finetuning/: groups.py  train.py
gbmi/exp_indhead/: Untitled-1  alexinductproof.py  bc.py  bound_prop.py  check_induction.py  data_utils.py  expectation_head.py  experiment.py  finetune.py  finetune_ind.py  finetunebound.py  finetunebound_copy.py  finetuned_model.pth  finetuned_model_0.pth  finetuned_model_100.pth  finetuned_model_200.pth  finetuned_model_300.pth  finetuned_model_400.pth  finetuned_model_test.pth  handcoded.py  handcodedtest copy.py  handcodedtest.py  handcodedtest_copy.py  induct_proof.py  induction_head_results.py  inductionbound.py  l_2_2_model.pth  l_2_2_term.pt  nextfile.py  noise_bound.py  noise_term.pt  oldinductproof.py  plot.py  probabilistic.py  realmodeltest.py  run_finetuning_abcab8_1h.py  run_training.py  run_training_abcab.py  run_training_abcab1h.py  run_training_abcab5_1h.py  (+29 more)
gbmi/exp_max_of_n/: __init__.py  analysis.py  plot.py  run_train_max_of_10.py  run_train_max_of_20.py  run_train_max_of_4.py  run_train_max_of_5.py  tests.py  train.py  train_test.py  verification.py
gbmi/exp_max_of_n/analysis/: __init__.py  ablation.py  importance_sample.py  importance_sample_cubic.py  quadratic.py  subcubic.py
gbmi/exp_max_of_n/probabilistic_experiments/: ab.py  american_dict.txt  british_dict.txt  chernoffbound.py  experiment.py.py  harry_potter.txt  hoeffding.py  ioi_experiments.py  kldiv.py  layernorm.py  main.py  model.pt  moon.py  pos_weights_transformer.py  probabilisticbounds.py  stanford.py  texts.py  transformer_exp.py.py
gbmi/exp_max_of_n/verification/: __init__.py  brute_force.py  cubic.py  importance_sample_cubic.py  quadratic.py  subcubic.py
gbmi/exp_modular_arithmetic/: __init__.py  run_train_clock.py  run_train_clocks.py  run_train_clocks_faster.py  run_train_days_months.py  run_train_pizza.py  run_train_pizzas.py  run_train_pizzas_eos.py  run_train_seq_3_pizza_eos.py  train.py
gbmi/exp_modular_fine_tuning/: train.py
gbmi/exp_multifun/: __init__.py  run_train_maxmin_of_10.py  run_train_maxmin_of_20.py  run_train_maxmin_of_4.py  run_train_maxmin_of_5.py  train.py
gbmi/exp_my_template/: analysis.py  train.py  verification.py
gbmi/exp_reduction_finetuning/: train.py
gbmi/exp_sorted_list/: train.py
gbmi/training_tools/: logging.py
gbmi/utils/: FactoredMatrix.py  __init__.py  __init___test.py  c_long.py  contextlib_extra.py  dataclass.py  dataclass_test.py  ein.py  ein_test.py  english_ngram.py  gc.py  git.py  hash.py  hashing.py  idset.py  images.py  instructions.py  latex_export.py  lazy.py  lowrank.py  memocache.py  memohf.py  memoshelve.py  pretty.py  sequences.py  testing.py
gbmi/verification_tools/: decomp.py  general.py  l1h1.py  svd.py  utils.py
notebooks_alex/: FineTuneClock.ipynb  PizzaClock.ipynb  copy.ipynb.merge-conflicted  forget.py  gln.py  mlpmultiply.py  pizzaclock.py
notebooks_eo/: ein.ipynb  eo_01_05_max10_analysis.ipynb  eo_01_05_max10_analysis_rerun.ipynb  eo_02_05_convex_hull_analysis.ipynb  eo_04_02_discopy.ipynb  eo_04_02_handcode_final.ipynb  eo_04_07_ortho.ipynb  latexdefs.tex
notebooks_jason/: max_of_2_devinterp.py  max_of_2_grokking.ipynb  max_of_2_grokking.py  max_of_4.py  max_of_4_all_models.ipynb  max_of_4_all_models.py  max_of_4_colorschemes.py  max_of_4_seeds.txt  max_of_5_all_models.py  max_of_K_all_models.py  split_seeds.py  visualize_proofs.py  wandb_cleanup.py  wandb_models_rename.py
notebooks_soufiane/: FineTuneSubtract.py  SubtractFineTune.ipynb  Untitled.ipynb  random_tests  sequence_model_experiment  two_functions.py
