[tool.poetry]
name = "gbmi"
version = "0.1.0"
description = "Guarantees-Based Mechanistic Interpretability Experiments and Tools"
authors = [
    "Jason Gross <jgross@mit.edu>",
    "Euan Ong <euan@ong.ac>",
    "Alex Gibson <mapessentials@gmail.com>",
    "Soufiane Noubir <noubir.soufiane@gmail.com>",
    "Som Bagchi <somsubhro.bagchi@gmail.com>",
    "Chun Hei Yip <chy34@cam.ac.uk>",
    "Rajashree Agrawal <rajashree.agrawal@gmail.com>",
]
readme = "README.md"
packages = [{ include = "gbmi" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
transformer-lens = "1.12.1"
einops = "^0.7.0"
plotly = "^5.18.0"
jupyterlab = "^4.0.10"
matplotlib = "^3.8"
jaxtyping = "^0.2.25"
scipy = "^1.11.4"
wandb = "^0.16.3"
pytest = "^8.0.0"
ipywidgets = "^8.1.1"
mypy = "^1.8.0"
types-tqdm = "^4.66.0.5"
lightning = "^2.1.3"
rich = "^13.7.0"
expecttest = "^0.2.1"
prettyprinter = "^0.18.0"
kaleido = "0.2.1"
imageio = "^2.33.1"
frozendict = "^2.4.0"
torchvision = "^0.17.0"
pillow = "^10.2.0"
scikit-learn = "^1.4.1.post1"
tikzplotly = "^0.1.2"
simple-parsing = "^0.1.5"
nltk = "^3.8.1"
tikzplotlib = { git = "https://github.com/JasonGross/tikzplotlib.git", branch = "patched" }
seaborn = "^0.13.2"
pandas = "^2.2.1"
cloudpickle = "^3.0.0"
ipympl = "^0.9.3"
dill = "^0.3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = { extras = ["jupyter"], version = "^24.0.0" }
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
