[dependency-groups]
dev = [
    "pre-commit<5.0.0,>=4.0.0",
    "black[jupyter]<25.0.0,>=24.0.0",
    "flake8<8.0.0,>=7.0.0",
    "ipykernel<7.0.0,>=6.29.5",
]
includes = ["gbmi"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88
target-version = ['py310']

[project]
authors = [
    {name = "Jason Gross", email = "jgross@mit.edu"},
    {name = "Euan Ong", email = "euan@ong.ac"},
    {name = "Alex Gibson", email = "mapessentials@gmail.com"},
    {name = "Soufiane Noubir", email = "noubir.soufiane@gmail.com"},
    {name = "Som Bagchi", email = "somsubhro.bagchi@gmail.com"},
    {name = "Chun Hei Yip", email = "chy34@cam.ac.uk"},
    {name = "Rajashree Agrawal", email = "rajashree.agrawal@gmail.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "torch<3.0.0,>=2.1.2",
    "transformer-lens==2.9.1",
    "einops<1.0.0,>=0.8.0",
    "plotly<6.0.0,>=5.18.0",
    "jupyterlab<5.0.0,>=4.0.10",
    "matplotlib<4.0.0,>=3.9.0",
    "jaxtyping<1.0.0,>=0.2.25",
    "scipy<2.0.0,>=1.11.4",
    "wandb<1.0.0,>=0.18.0",
    "pytest<9.0.0,>=8.0.0",
    "ipywidgets<9.0.0,>=8.1.1",
    "mypy<2.0.0,>=1.8.0",
    "types-tqdm<5.0.0.0,>=4.66.0.5",
    "lightning<3.0.0,>=2.1.3",
    "rich<14.0.0,>=13.7.0",
    "expecttest<1.0.0,>=0.3.0",
    "prettyprinter<1.0.0,>=0.18.0",
    "kaleido==0.2.1",
    "imageio<3.0.0,>=2.33.1",
    "frozendict<3.0.0,>=2.4.0",
    "pillow<12.0.0,>=11.0.0",
    "scikit-learn<2.0.0.0,>=1.4.1-post.0",
    "tikzplotly<1.0.0,>=0.1.2",
    "simple-parsing<1.0.0,>=0.1.5",
    "nltk<4.0.0,>=3.8.1",
    "seaborn<1.0.0,>=0.13.2",
    "pandas<3.0.0,>=2.2.1",
    "cloudpickle<4.0.0,>=3.0.0",
    "ipympl<1.0.0,>=0.9.3",
    "dill<1.0.0,>=0.3.8",
    "tqdm-multiprocess<1.0.0,>=0.0.11",
    "cirron<1.0,>=0.4",
    "eintorch<1.0.0,>=0.2.5",
    "numpy<3.0.0,>=2.0.1",
    "tikzplotlib-patched<1.0.0.0,>=0.10.1.post13",
    "datasets<4.0.0,>=3.0.0",
    "circuitsvis<2.0.0,>=1.43.2",
    "plotly-gif<1.0.0,>=0.0.4",
]
name = "gbmi"
version = "0.1.0"
description = "Guarantees-Based Mechanistic Interpretability Experiments and Tools"
readme = "README.md"
