[tool.poetry]
name = "gbmi"
version = "0.1.0"
description = "Guarantees-Based Mechanistic Interpretability Experiments and Tools"
authors = [
    "Jason Gross <jgross@mit.edu>",
    "Euan Ong <euan@ong.ac>",
    "Alex Gibson <mapessentials@gmail.com>",
    "Soufiane Noubir <noubir.soufiane@gmail.com>",
    "Som Bagchi <somsubhro.bagchi@gmail.com>",
    "Chun Hei Yip <chy34@cam.ac.uk>",
    "Rajashree Agrawal <rajashree.agrawal@gmail.com>",
]
readme = "README.md"
packages = [{ include = "gbmi" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
transformer-lens = "2.9.1"
einops = "^0.8.0"
plotly = "^5.18.0"
jupyterlab = "^4.0.10"
matplotlib = "^3.9.0"
jaxtyping = "^0.2.25"
scipy = "^1.11.4"
wandb = "^0.21.0"
pytest = "^8.0.0"
ipywidgets = "^8.1.1"
mypy = "^1.8.0"
types-tqdm = "^4.66.0.5"
lightning = "^2.1.3"
rich = "^13.7.0"
expecttest = "^0.3.0"
prettyprinter = "^0.18.0"
kaleido = "0.2.1"
imageio = "^2.33.1"
frozendict = "^2.4.0"
pillow = "^11.0.0"
scikit-learn = "^1.4.1-post.0"
tikzplotly = "^0.1.2"
simple-parsing = "^0.1.5"
nltk = "^3.8.1"
seaborn = "^0.13.2"
pandas = "^2.2.1"
cloudpickle = "^3.0.0"
ipympl = "^0.9.3"
dill = "^0.3.8"
tqdm-multiprocess = "^0.0.11"
cirron = "^0.4"
eintorch = "^0.2.5"
numpy = "^2.0.1"
tikzplotlib-patched = "^0.10.1.post13"
datasets = "^3.0.0"
circuitsvis = "^1.43.2"
plotly-gif = "^0.0.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
black = { extras = ["jupyter"], version = "^24.0.0" }
flake8 = "^7.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
